amun/overlays/moc-prod/amun-api/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: amun-api-route53
spec:
    host: amun.moc.thoth-station.ninja
    to:
        kind: Service
        name: amun-api
    tls:
        caCertificate: ENC[AES256_GCM,data:PNZc+1Q3gs2Xs3MTtBiUdzletEQ3lruMKCsfk4ymMS6spTbYJzn2rBlLl0gs6ngnvXWwP3eF8D5CO6sSrRZiMdkbrk5nfmV8Ye7FQbO1jNzgH0oYtlYzcQKw7gsgxVXy7EcqOlNjK5hNv0pX65oEsBcTooWlWP2xdlB7Eos16FS3Tfopvb3XRZucFzY2rokFSKPvW1dbNYKz0FYi0R+m5wArCiFHiiir3qIM/Psa6HLDHekaMSDMFN0EsSc8x0q68/+WMCIdv1KZsGaQzw8nAlvbkOymXLrx94zNyGGM+HyW06aholNr+zI+CZjjVKircy/QxHFrst08R/ewuYf8SgottzGyMWXo/KiO+I6bSfcEc0v4CkEgyTL8R4M+ScUQs0221yYrV6uBTbc4SpmlApSiigGdtvU90Bfa1fsLobRYeXbTMPw8wrRA/Zy/yGYgc8bESAOyC [...]
        certificate: ENC[AES256_GCM,data:yU2qOPHVM9lnBayUHn8CwrgXT057mIlD8ul2SoQDha+A1vxJfguMH6EG9VD2K51mRQRapuFLXCh4gIiuY0xqM2fZ9pBMFV6c+1HzjKf9sqvrCP03IuIUY6X4MX3LNrbiEAhZ49AmgX32bLV0m5GY47q7EfT1r4b+d2irdkjeSvpmjM1FQYhdumoSjuuCX4F1KvjWhBzYSI7xVp8R+fj7828jdugzmhsERbvegoVZPK00Xp8dcq+XXvu7EbO5Y7CY987VTFbQVCOYI/il0/aB3T3Yvvi/l/9jRCajrjR3IoblLkgxe3yndmwqlfTxBFis5wmx0eLgrq4G5qTDK/AMYVrjGchADTEI61j1ILwP3WpVXwdUf1CaKGeLzE5UnCVfN6qDrJpHQxmp20sLzNGYlZ+tC8a1Y1J9YKSuereNi6QB9M4Ah9BfdHMl6RlqczKhcVJro+YH5r1 [...]
        key: ENC[AES256_GCM,data:lRVkSCb1pzsvDt2jZdD9gL2amlrEeedivQettbRJlLw1ogtz9d3pDBvy3vYaEfswzPVTA768XnAhy7z3/+/Xpgb9i4IaxGIwpSLOlRcE5cppFJUfCCCfejY2jU2flNPElElamcDdxxa5r07L1e8yU1yyODDcYgyFjvOY+IxeIu8MdkFkpwc/+vtNmd6w4IhSVT1tJS0B5WBiAJTaOlziZY1q34z66GHIP4oVcOJDFTe3R8dJ81pu+mmTEA2/APx4W5arm3oXaCmWoQWBwY6BnTmtWyTBnHr9OJo68EATA9RTUJ2aQRNWrSjRTAe0RwqJ+3Xlqcv8Hhl5csWCQRgRaOxkKOkpEhrc7OVPs3MosWISKSHBDI4DwlrsZqxYTG//crqD6IU4nGxE1AzAzlPI4lJ5CZ5stn90cwo5M7v0IrX2/8o5kDddMvnpv8hVgFDEMuaIAQd/q9OXF/fld0z [...]
        termination: ENC[AES256_GCM,data:3jqV/w==,iv:bBmjafvT9OG6LC/kH5gSUSgYI+4zUBX7Zz9djWzuv6w=,tag:NBhrl4tUW5XDfuC75fVCWQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2021-08-02T08:44:13Z'
    mac: ENC[AES256_GCM,data:WC82JywUocP9amq2sERr9yjeNf+68pxbpW7Ayf3X47G7tENeFwNPh8s+2YEHIVdA7qbQuzDrgJaheFA75KHZiZXXFV3/NFs9/RG4sCcktglQhsaC4xw+rOp9BcE0E/RVZIY2buK8pAer4sU3FUwZaATZVIzGEeFpQKlxTed2nAw=,iv:+VnaXQSHVxklPkblm9NMAyJPipHLB32xZnk2VGUaPK0=,tag:M4uU1Eaj4L0+qUbMWPHaeA==,type:str]
    pgp:
    -   created_at: '2021-08-02T08:44:13Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ//S9tpAy/y2FFzAVtZgb9d2nfgpnTnljKO4K2Wzp9ytGnA
[...]
            =kPEf
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2021-08-02T08:44:13Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQgAnecPv5ethVpTTK5wRFj6gj/Wbeb3ppTLZOdRFAy3MZgF
[...]
            3O/PCcgk21Lm8Lyq/QdK9sKDyIefbzxGqrV+hB3oSw==
            =LaH3
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2021-08-02T08:44:13Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/QA4Pj6Br/GcLB9M7h8Qs+VmSsYdPXEKri2j/bOueCR7b
[...]
            NwlDQ828xdXtLb7A4eMLeeQtZVicsyF1xUG9K62q/g==
            =Qne6
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    -   created_at: '2021-08-02T08:44:13Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiAQ//X40ZGsc5Z9DTMFttqUmmCcD5pBYyPgNqN1Ia/23wyGoR
[...]
            =2xY3
            -----END PGP MESSAGE-----
        fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
