amun/overlays/moc-prod/amun-api/route53.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: amun-api-route53
    annotations:
      kubernetes.io/tls-acme: "true"
      haproxy.router.openshift.io/timeout: 45s
spec:
    host: amun.moc.thoth-station.ninja
    to:
        kind: Service
        name: amun-api
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: amun-api-prod
    annotations:
      kubernetes.io/tls-acme: "true"
      haproxy.router.openshift.io/timeout: 45s
spec:
    host: amun.prod.thoth-station.ninja
    to:
        kind: Service
        name: amun-api
